优化播放线路